--- a/src/two-js-figs/config_production.html
+++ b/src/two-js-figs/config_production.html
@@ -286,7 +286,8 @@
 
 <body>
 
-  <div id='config_production_canvas' style='width:2000px;height:1000px;'> </div>
+  <!-- <div id='config_production_canvas' style='width:2000px;height:1000px;'> </div> -->
+  <div id='config_production_canvas' style='width:1400px;height:800px;'> </div>
 
 </body>
 
