main 2d subdivision figure

--- a/src/two-js-figs/gilbert2d_mainsubdiv.html
+++ b/src/two-js-figs/gilbert2d_mainsubdiv.html
@@ -25,6 +25,9 @@
   <script type='text/javascript' src='js/two.js'></script>
   <script type='text/javascript' src='js/gilbert2d_mainsubdiv.js'></script>
 
+  <script type='text/javascript' src='js/FileSaver.js'></script>
+
+
 </head>
 
 <body>
@@ -43,7 +46,7 @@
   <div id='mj_b2_' style='display:none;'>$\frac{b}{2}$</div>
 
 
-  <div id='gilbert2d_mainsubdiv' style='width:800px;height:600px;'> </div>
+  <div id='gilbert2d_mainsubdiv' style='width:700px;height:350px;'> </div>
 </body>
 
 <script>
