--- a/src/two-js-figs/gilbert2d_mainsubdiv.html
+++ b/src/two-js-figs/gilbert2d_mainsubdiv.html
@@ -38,12 +38,15 @@
   <div id='mj_n' style='display:none;'>$n$</div>
   <div id='mj_npp' style='display:none;'>$n+1$</div>
   -->
-  <div id='mj_a' style='display:none;'>$a$</div>
-  <div id='mj_b' style='display:none;'>$b$</div>
-  <div id='mj_a2' style='display:none;'>$a/2$</div>
-  <div id='mj_b2' style='display:none;'>$b/2$</div>
-  <div id='mj_a2_' style='display:none;'>$\frac{a}{2}$</div>
-  <div id='mj_b2_' style='display:none;'>$\frac{b}{2}$</div>
+  <div id='mj_a' style='display:none;'>$\alpha$</div>
+  <div id='mj_b' style='display:none;'>$\beta$</div>
+  <div id='mj_a2' style='display:none;'>$\alpha_2$</div>
+  <div id='mj_b2' style='display:none;'>$\beta_2$</div>
+  <div id='mj_a2_' style='display:none;'>$\frac{\alpha}{2}$</div>
+  <div id='mj_b2_' style='display:none;'>$\frac{\beta}{2}$</div>
+
+  <div id='mj_ad2' style='display:none;'>$\alpha/2$</div>
+  <div id='mj_bd2' style='display:none;'>$\beta/2$</div>
 
 
   <div id='gilbert2d_mainsubdiv' style='width:700px;height:350px;'> </div>
