--- a/src/two-js-figs/gilbert3d_eccentric.html
+++ b/src/two-js-figs/gilbert3d_eccentric.html
@@ -35,63 +35,30 @@
 
 <body>
 
-  <div id='alpha' style='display:none;'>$\alpha$</div>
-  <div id='beta' style='display:none;'>$\beta$</div>
-  <div id='gamma' style='display:none;'>$\gamma$</div>
+  <div id='wgg' style='display:none;'>$|\alpha| \gg |\beta| \sim |\gamma|$</div>
+  <div id='wll' style='display:none;'>$|\alpha| \ll |\beta| \sim |\gamma|$</div>
 
-  <div id='alpha2' style='display:none;'>$\alpha_{2}$</div>
-  <div id='beta2' style='display:none;'>$\beta_{2}$</div>
-  <div id='gamma2' style='display:none;'>$\gamma_{2}$</div>
+  <div id='hgg' style='display:none;'>$|\beta| \gg |\alpha| \sim |\gamma|$</div>
+  <div id='hll' style='display:none;'>$|\beta| \ll |\alpha| \sim |\gamma|$</div>
 
-  <div id='alpha2p' style='display:none;'>$\alpha_{2+}$</div>
-  <div id='beta2p' style='display:none;'>$\beta_{2+}$</div>
-  <div id='gamma2p' style='display:none;'>$\gamma_{2+}$</div>
+  <div id='dgg' style='display:none;'>$|\gamma| \gg |\alpha| \sim |\beta|$</div>
+  <div id='dll' style='display:none;'>$|\gamma| \ll |\alpha| \sim |\beta|$</div>
 
-  <div id='alpha2e' style='display:none;'>$\alpha_{2e}$</div>
-  <div id='beta2e' style='display:none;'>$\beta_{2e}$</div>
-  <div id='gamma2e' style='display:none;'>$\gamma_{2e}$</div>
+  <div id='_wgg' style='display:none;'>$w \gg h \sim d$</div>
+  <div id='_wll' style='display:none;'>$w \ll h \sim d$</div>
 
-  <div id='alpha2u' style='display:none;'>$\alpha_{2u}$</div>
-  <div id='beta2u' style='display:none;'>$\beta_{2u}$</div>
-  <div id='gamma2u' style='display:none;'>$\gamma_{2u}$</div>
+  <div id='_hgg' style='display:none;'>$h \gg w \sim d$</div>
+  <div id='_hll' style='display:none;'>$h \ll w \sim d$</div>
 
-  <div id='alpha2up' style='display:none;'>$\alpha_{2u+}$</div>
-  <div id='beta2up' style='display:none;'>$\beta_{2u+}$</div>
-  <div id='gamma2up' style='display:none;'>$\gamma_{2u+}$</div>
+  <div id='_dgg' style='display:none;'>$d \gg w \sim h$</div>
+  <div id='_dll' style='display:none;'>$d \ll w \sim h$</div>
 
-  <div id='alpha2s' style='display:none;'>$\alpha_{2 * }$</div>
-  <div id='beta2s' style='display:none;'>$\beta_{2 * }$</div>
-  <div id='gamma2s' style='display:none;'>$\gamma_{2 * }$</div>
+  <div id='S0' style='display:none;'>$S_0$</div>
+  <div id='S1' style='display:none;'>$S_1$</div>
+  <div id='S2' style='display:none;'>$S_2$</div>
 
-  <div id='m_alpha' style='display:none;'>$-\alpha$</div>
-  <div id='m_beta' style='display:none;'>$-\beta$</div>
-  <div id='m_gamma' style='display:none;'>$-\gamma$</div>
 
-  <div id='m_alpha2' style='display:none;'>$-\alpha_{2}$</div>
-  <div id='m_beta2' style='display:none;'>$-\beta_{2}$</div>
-  <div id='m_gamma2' style='display:none;'>$-\gamma_{2}$</div>
-
-  <div id='m_alpha2p' style='display:none;'>$-\alpha_{ 2 + }$</div>
-  <div id='m_beta2p' style='display:none;'>$-\beta_{2+}$</div>
-  <div id='m_gamma2p' style='display:none;'>$-\gamma_{2+}$</div>
-
-  <div id='m_alpha2e' style='display:none;'>$-\alpha_{2e}$</div>
-  <div id='m_beta2e' style='display:none;'>$-\beta_{2e}$</div>
-  <div id='m_gamma2e' style='display:none;'>$-\gamma_{2e}$</div>
-
-  <div id='m_alpha2u' style='display:none;'>$-\alpha_{2u}$</div>
-  <div id='m_beta2u' style='display:none;'>$-\beta_{2u}$</div>
-  <div id='m_gamma2u' style='display:none;'>$-\gamma_{2u}$</div>
-
-  <div id='m_alpha2up' style='display:none;'>$-\alpha_{2u+}$</div>
-  <div id='m_beta2up' style='display:none;'>$-\beta_{2u+}$</div>
-  <div id='m_gamma2up' style='display:none;'>$-\gamma_{2u+}$</div>
-
-  <div id='m_alpha2s' style='display:none;'>$-\alpha_{2 * }$</div>
-  <div id='m_beta2s' style='display:none;'>$-\beta_{2 * }$</div>
-  <div id='m_gamma2s' style='display:none;'>$-\gamma_{2 * }$</div>
-
-  <div id='gilbert3d_eccentric_canvas' style='width:1000px;height:1000px;'> </div>
+  <div id='gilbert3d_eccentric_canvas' style='width:400px;height:350px;'> </div>
 
 </body>
 
