--- a/src/two-js-figs/gilbert3d_eccentric.html
+++ b/src/two-js-figs/gilbert3d_eccentric.html
@@ -35,6 +35,10 @@
 
 <body>
 
+  <div id='alpha' style='display:none;'>$\alpha$</div>
+  <div id='beta' style='display:none;'>$\beta$</div>
+  <div id='gamma' style='display:none;'>$\gamma$</div>
+
   <div id='wgg' style='display:none;'>$|\alpha| \gg |\beta| \sim |\gamma|$</div>
   <div id='wll' style='display:none;'>$|\alpha| \ll |\beta| \sim |\gamma|$</div>
 
