--- a/src/two-js-figs/gilbert3d_case.html
+++ b/src/two-js-figs/gilbert3d_case.html
@@ -37,6 +37,10 @@
 
 <body>
 
+  <div id='J0' style='display:none;'>$J_0$</div>
+  <div id='J1' style='display:none;'>$J_1$</div>
+  <div id='J2' style='display:none;'>$J_2$</div>
+
   <div id='alpha' style='display:none;'>$\alpha$</div>
   <div id='beta' style='display:none;'>$\beta$</div>
   <div id='gamma' style='display:none;'>$\gamma$</div>
@@ -61,9 +65,13 @@
   <div id='beta2up' style='display:none;'>$\beta_{2u+}$</div>
   <div id='gamma2up' style='display:none;'>$\gamma_{2u+}$</div>
 
-  <div id='alpha2s' style='display:none;'>$\alpha_{2 * }$</div>
-  <div id='beta2s' style='display:none;'>$\beta_{2 * }$</div>
-  <div id='gamma2s' style='display:none;'>$\gamma_{2 * }$</div>
+  <div id='__alpha2s' style='display:none;'>$\alpha_{2 * }$</div>
+  <div id='__beta2s' style='display:none;'>$\beta_{2 * }$</div>
+  <div id='__gamma2s' style='display:none;'>$\gamma_{2 * }$</div>
+
+  <div id='alpha2s' style='display:none;'>$\alpha_{2e+}$</div>
+  <div id='beta2s' style='display:none;'>$\beta_{2e+}$</div>
+  <div id='gamma2s' style='display:none;'>$\gamma_{2e+}$</div>
 
   <div id='m_alpha' style='display:none;'>$-\alpha$</div>
   <div id='m_beta' style='display:none;'>$-\beta$</div>
@@ -89,9 +97,13 @@
   <div id='m_beta2up' style='display:none;'>$-\beta_{2u+}$</div>
   <div id='m_gamma2up' style='display:none;'>$-\gamma_{2u+}$</div>
 
-  <div id='m_alpha2s' style='display:none;'>$-\alpha_{2 * }$</div>
-  <div id='m_beta2s' style='display:none;'>$-\beta_{2 * }$</div>
-  <div id='m_gamma2s' style='display:none;'>$-\gamma_{2 * }$</div>
+  <div id='__m_alpha2s' style='display:none;'>$-\alpha_{2 * }$</div>
+  <div id='__m_beta2s' style='display:none;'>$-\beta_{2 * }$</div>
+  <div id='__m_gamma2s' style='display:none;'>$-\gamma_{2 * }$</div>
+
+  <div id='m_alpha2s' style='display:none;'>$-\alpha_{2e+}$</div>
+  <div id='m_beta2s' style='display:none;'>$-\beta_{2e+}$</div>
+  <div id='m_gamma2s' style='display:none;'>$-\gamma_{2e+}$</div>
 
   <div id='A_P0' style='display:none;'>$(\beta_{2e},\gamma_{2e},\alpha_{2e})$</div>
   <div id='B_P0' style='display:none;'>$(\gamma,\alpha_{2e},\beta_{2*})$</div>
