--- a/src/two-js-figs/gilbert2d_pathological.html
+++ b/src/two-js-figs/gilbert2d_pathological.html
@@ -22,7 +22,7 @@
   </script>
   <script id='MathJax-script' type='text/javascript' async src='js/mathjax/es5/tex-svg.js'></script>
 
-  <script type='text/javascript' src='js/gilbert.js'></script>
+  <script type='text/javascript' src='js/gilbert3dpp.js'></script>
   <script type='text/javascript' src='js/two.js'></script>
   <script type='text/javascript' src='js/gilbert2d_pathological.js'></script>
 
