--- a/src/two-js-figs/gilbert3d_eccentric_appendix_s1.html
+++ b/src/two-js-figs/gilbert3d_eccentric_appendix_s1.html
@@ -61,15 +61,18 @@
   <div id='S1' style='display:none;'>$S_1$</div>
   <div id='S2' style='display:none;'>$S_2$</div>
 
+  <div id='one_m_rho_s' style='display:none;'>$(1-\rho)$</div>
   <div id='one_m_rho' style='display:none;'>$(1-\rho) = 2/3$</div>
+  <div id='rho_s' style='display:none;'>$\rho$</div>
   <div id='rho' style='display:none;'>$\rho = 1/3$</div>
   <div id='sigma' style='display:none;'>$\sigma$</div>
   <div id='sigma_s' style='display:none;'>$\sigma s$</div>
+  <div id='s_d_sigma' style='display:none;'>$\frac{s}{\sigma}$</div>
   <div id='s' style='display:none;'>$s$</div>
   <div id='one_half' style='display:none;'>$1/2$</div>
 
 
-  <div id='gilbert3d_eccentric_canvas' style='width:350px;height:280px;'> </div>
+  <div id='gilbert3d_eccentric_canvas' style='width:450px;height:330px;'> </div>
 
 </body>
 
