variants and hellebore (wip)

--- a/src/two-js-figs/gilbert3d_hellebore.html
+++ b/src/two-js-figs/gilbert3d_hellebore.html
@@ -14,7 +14,7 @@
   <script type='text/javascript' src='js/two.js'></script>
   <script type='text/javascript' src='js/mp_path.js'></script>
 
-  <script type='text/javascript' src='js/gilbert3d_variants.js'></script>
+  <script type='text/javascript' src='js/gilbert3d_hellebore.js'></script>
 
   <script>
   MathJax = {
@@ -302,13 +302,13 @@
   <div id='beta' style='display:none;'>$\beta$</div>
   <div id='gamma' style='display:none;'>$\gamma$</div>
 
-  <div id='gilbert3d_variants' style='width:800px;height:800px;'> </div>
+  <div id='gilbert3d_hellebore' style='width:1600px;height:1600px;'> </div>
 
 </body>
 
   <script>
     function mathjax_ready() {
-      gilbert3d_variants();
+      gilbert3d_hellebore();
     }
   </script>
 
