eccentric 3d figures and examples

--- a/src/two-js-figs/gilbert3d_eccentric_alpha.html
+++ b/src/two-js-figs/gilbert3d_eccentric_alpha.html
@@ -39,8 +39,8 @@
   <div id='beta' style='display:none;'>$\beta$</div>
   <div id='gamma' style='display:none;'>$\gamma$</div>
 
-  <div id='alpha_gt_gamma' style='display:none;'>$\alpha &gt; (3/2) |\gamma|$</div>
-  <div id='alpha_gt_beta' style='display:none;'>$\alpha &gt;  (3/2) |\beta|$</div>
+  <div id='alpha_gt_gamma' style='display:none;'>$|\alpha| &gt; (3/2) |\gamma|$</div>
+  <div id='alpha_gt_beta' style='display:none;'>$|\alpha| &gt;  (3/2) |\beta|$</div>
   <div id='abs_gamma' style='display:none;'>$|\gamma|$</div>
   <div id='abs_beta' style='display:none;'>$|\beta|$</div>
 
