--- a/src/two-js-figs/gilbert3d_eccentric_beta_example.html
+++ b/src/two-js-figs/gilbert3d_eccentric_beta_example.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Gilbert3D Alpha Example</title>
+  <title>Gilbert3D Eccentric Beta Example</title>
 
 
   <script>
