--- a/src/two-js-figs/gilbert3d_eccentric_gamma_simple.html
+++ b/src/two-js-figs/gilbert3d_eccentric_gamma_simple.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>fig</title>
+  <title>Gilbert3d Eccentric Gamma Template</title>
 
   <script type='text/javascript' src='js/gilbert.js'></script>
   <script type='text/javascript' src='js/numeric.js'></script>
