--- a/src/two-js-figs/gilbert2d_example_bulk.html
+++ b/src/two-js-figs/gilbert2d_example_bulk.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Gilbert3D Eccentric Gamma Example</title>
+  <title>Gilbert2D Eccentric Example</title>
 
 
   <script>
@@ -23,30 +23,28 @@
   <script id='MathJax-script' type='text/javascript' async src='js/mathjax/es5/tex-svg.js'></script>
 
   <script type='text/javascript' src='js/gilbert.js'></script>
-  <script type='text/javascript' src='js/gilbert3dpp.js'></script>
   <script type='text/javascript' src='js/two.js'></script>
-  <script type='text/javascript' src='js/numeric.js'></script>
-  <script type='text/javascript' src='js/gilbert3d_eccentric_gamma_example.js'></script>
+  <script type='text/javascript' src='js/gilbert2d_example_bulk.js'></script>
 
   <script type='text/javascript' src='js/FileSaver.js'></script>
 
+<style>
+.shadow-text {
+  text-shadow: 2px 2px 4px #cccccc; /* h-shadow | v-shadow | blur | color */
+}
+</style>
 
 </head>
 
 <body>
 
 
-  <div id='alpha' style='display:none;'>$\alpha$</div>
-  <div id='beta' style='display:none;'>$\beta$</div>
-  <div id='gamma' style='display:none;'>$\gamma$</div>
-
-
-  <div id='gilbert3d_examples' style='width:350px;height:250px;'> </div>
+  <div id='gilbert2d_example_mainsubdiv' style='width:450px;height:330px;'> </div>
 </body>
 
 <script>
   function mathjax_ready() {
-    gilbert3d_gamma_example();
+    gilbert2d_example_bulk();
   }
 </script>
 <html>
